--- a/styles/main.css
+++ b/styles/main.css
@@ -1,3 +1,6 @@
+
+
+
 /*-------------*/
 /*Style Header*/
 
@@ -30,14 +33,17 @@ body{background:#ecf0f1; font-family:arial; margin:0; color:#888}
   line-height:50px;
   float:left;
 }
-.nav{
+.nav_top{
   list-style:none;
   float:left;
 }
-.nav li{display:inline-block;}
-.nav li a{
-    display:inline-block;
-   padding:3px 15px;
+.nav_top li{
+  display:inline-block;
+}
+
+.nav_top li a{
+  display:inline-block;
+  padding:3px 15px;
   color:inherit;
   text-decoration:none;
 }
@@ -57,15 +63,15 @@ body{background:#ecf0f1; font-family:arial; margin:0; color:#888}
   font-size:10px;
   text-align:center
 }
-.bottom-nav{
+.bottom-nav_top{
   text-align:center;
   background:#02BDD6;
   width:100%;
   color:#fff;
   height:35px
 }
-.bottom-nav .nav{float:none; margin:0}
-.bottom-nav .nav a{ padding: 0 25px; line-height:35px}
+.bottom-nav_top .nav_top{float:none; margin:0}
+.bottom-nav_top .nav_top a{ padding: 0 25px; line-height:35px}
 .fixed-top, .fixed-bottom{
   background:#02BDD6;
   position:fixed;
@@ -74,5 +80,15 @@ body{background:#ecf0f1; font-family:arial; margin:0; color:#888}
 .fixed-bottom{
     top:auto;
   bottom:0;
+}
+
+@media(max-width: 600px){
+   .header{
+     text-align: right;
+   }
+
+   .container h1{
+     position: absolute;
+   }
 }
 /*End Header Styles*/
