--- a/styles/main.css
+++ b/styles/main.css
@@ -1,94 +1,225 @@
+/*Footer*/
 
-
-
-/*-------------*/
-/*Style Header*/
-
-*{
-  box-sizing:border-box;
-  -moz-box-sizing:border-box;
-  -webkit-box-sizing:border-box;
-  font-family:arial;
+p{
+  text-align: justify;
+}
+.context-dark, .bg-gray-dark, .bg-primary {
+  color: rgba(255, 255, 255, 0.8);
 }
 
-body{background:#ecf0f1; font-family:arial; margin:0; color:#888}
-.banner{
-  background:#00DAFC;
-  line-height:400px;
-  text-align:center;
-  color:#fff;
-  font-size:60px;
-  height:400px;
+.footer-classic a, .footer-classic a:focus, .footer-classic a:active {
+    color: #ffffff;
+}
+.nav-list li {
+    padding-top: 5px;
+    padding-bottom: 5px;
+}
+
+.nav-list li a:hover:before {
+    margin-left: 0;
+    opacity: 1;
+    visibility: visible;
+}
+
+.nav-list li a:before {
+    content: "\f14f";
+    font: 400 21px/1 "Material Design Icons";
+    color: #4d6de6;
+    display: inline-block;
+    vertical-align: baseline;
+    margin-left: -28px;
+    margin-right: 7px;
+    opacity: 0;
+    visibility: hidden;
+    transition: .22s ease;
+}
+      /*Footer*/
+
+      /*RESET STYLES
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+ul li a{
+  text-transform: uppercase;
+}
+
+.menu_items ul{
+  padding-top: 15px;
+
+}
+
+.menu_items ul{
+ font-family: 'Titillium Web', sans-serif;
+}
+
+
+
+body,
+h1,
+ul {
+  margin: 0;
+}
+
+li {
+  list-style-type: none;
+}
+
+h1 {
+  font-size: 1.5rem;
+}
+
+a {
+  text-decoration: none;
+  /*text-transform: uppercase;*/
+  color: #fff;
+}
+
+.toggle-menu {
+  box-shadow: none;
+  background: transparent;
+  border: 0;
+}
+
+body {
+  background: #f1f1f1;
+  color: #272626;
+font-family: 'Black Han Sans', sans-serif;
+}
+
+
+/* HEADER STYLES
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+
+header {
+  z-index: 1000;
+  position: fixed;
+  height: 100px;
+  top: 0;
   width: 100%;
+  box-sizing: border-box;
+  background: #DD3543;
+  font-weight: bold;
 }
 
-.header{
-    height:60px;
-  background:#00DAFC;
-  color:#fff;
-  width:100%;
-}
-.logo{
-  margin:0;
-  line-height:50px;
-  float:left;
-}
-.nav_top{
-  list-style:none;
-  float:left;
-}
-.nav_top li{
-  display:inline-block;
+nav {
+  display: flex;
+  align-items: flex-end;
+  justify-content: space-between;
+  transition: align-items .2s;
+ margin-top: -50px;
 }
 
-.nav_top li a{
-  display:inline-block;
-  padding:3px 15px;
-  color:inherit;
-  text-decoration:none;
+ul {
+  display: flex;
+  /*margin: 50px 50px 0 0;*/
+  padding: 0;
+  transition: margin .2s;
 }
 
-.container{
-  max-width:1200px;
-  padding:0 15px;
-  width:100%;
-}
-.container:after {
-    clear: both;
-    content: "";
-    display: table;
-}
-.footer{background:#0A95AA; color:#fff; height:100px}
-.copy{
-  font-size:10px;
-  text-align:center
-}
-.bottom-nav_top{
-  text-align:center;
-  background:#02BDD6;
-  width:100%;
-  color:#fff;
-  height:35px
-}
-.bottom-nav_top .nav_top{float:none; margin:0}
-.bottom-nav_top .nav_top a{ padding: 0 25px; line-height:35px}
-.fixed-top, .fixed-bottom{
-  background:#02BDD6;
-  position:fixed;
-  top:0;
-}
-.fixed-bottom{
-    top:auto;
-  bottom:0;
+li:not(:last-child) {
+  margin-right: 20px;
 }
 
-@media(max-width: 600px){
-   .header{
-     text-align: right;
-   }
-
-   .container h1{
-     position: absolute;
-   }
+li a {
+  display: block;
+  padding: 10px 20px;
 }
-/*End Header Styles*/
+
+.toggle-menu {
+  display: none;
+  font-size: 2rem;
+  color: #fff;
+  margin: 10px 10px 0 0;
+  transition: margin .2s;
+}
+
+
+/* MAIN STYLES
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+
+main {
+  display: block;
+  padding: 0 20px;
+}
+
+
+/* STYLES FOR THE "scroll" CLASS
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+
+.scroll {
+  box-shadow: 0 7px 0 0 rgba(0, 0, 0, .1);
+}
+
+.scroll .logo {
+  padding: 10px 20px;
+  font-size: 1.5rem;
+}
+
+.scroll nav {
+  align-items: center;
+}
+
+.scroll .logo,
+.scroll ul,
+.scroll .toggle-menu {
+  margin: 0;
+}
+
+
+/* MQ STYLES
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+
+@media screen and (max-width: 1060px) {
+  header {
+    padding: 10px;
+  }
+  nav {
+    align-items: center;
+  }
+  ul {
+    display: none;
+  }
+  .logo {
+    font-size: 1.8rem;
+    margin: 45px 0 0 10px;
+  }
+  .toggle-menu {
+    display: block;
+  }
+}
+
+
+/* STYLES FOR THE COUNTER
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+
+.counter {
+  visibility: hidden;
+  position: fixed;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  right: 1px;
+  padding: 5px;
+  color: #fff;
+  background: #DD3543;
+}
+
+h1 a img{
+  height: 91px;
+  width: 225px;
+  padding-left: 20px;
+}
+
+ .nav_items li a:hover{
+   text-decoration: none;
+   background-color: rgba(0, 0, 0, 0.4);
+   color:#fff;
+   font-weight: bold;
+}
+
+.nav_items li a:focus{
+   background-color: rgba(0, 0, 0, 0.4);
+   border-radius: 10px;
+   color:#fff;
+   font-weight: bold;
+}
+
+/
