focus on footer only

--- a/styles/main.css
+++ b/styles/main.css
@@ -1,4 +1,9 @@
 /*Footer*/
+.footer-classic{
+  background:linear-gradient(0deg,rgba(0,0,0,0.6),rgba(0,0,0,0.6)),url(https://www.desktopbackground.org/p/2010/08/18/66072_111-cruise-ship-hd-wallpapers_3840x2160_h.jpg) center center;
+  /*background: url("https://www.desktopbackground.org/p/2010/08/18/66072_111-cruise-ship-hd-wallpapers_3840x2160_h.jpg") no-repeat center center ;*/
+  background-size: cover;
+} 
 
 p{
   text-align: justify;
