--- a/styles/main.css
+++ b/styles/main.css
@@ -1,7 +1,7 @@
 /*Start Box Body*/
-.sec1 .col-md-6{
-   padding-left: 0px;
-   padding-right: 0px;
+.body-content .col-md-6{
+  padding-right: 0px;
+  padding-left:0px;
 }
 
 
@@ -96,7 +96,7 @@ font-family: 'Black Han Sans', sans-serif;
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 
 header {
-  /*z-index: 1000;*/
+  z-index: 1000;
   position: fixed;
   height: 100px;
   top: 0;
