--- a/styles/main.css
+++ b/styles/main.css
@@ -10,8 +10,11 @@
 
 /*Footer*/
 .footer-classic{
-  background:linear-gradient(0deg,rgba(0,0,0,0.6),rgba(0,0,0,0.6)),url(https://www.desktopbackground.org/p/2010/08/18/66072_111-cruise-ship-hd-wallpapers_3840x2160_h.jpg) center center;
+  /*background:linear-gradient(0deg,rgba(0,0,0,0.6),rgba(0,0,0,0.6)),url(https://www.desktopbackground.org/p/2010/08/18/66072_111-cruise-ship-hd-wallpapers_3840x2160_h.jpg) center center;*/
+  background:linear-gradient(0deg,rgba(2,38,56,0.8),rgba(0,0,0,0.8)),url(https://www.desktopbackground.org/p/2010/08/18/66072_111-cruise-ship-hd-wallpapers_3840x2160_h.jpg) center center;
   background-size: cover;
+  /*background: #022638*/
+
 } 
 
 p{
@@ -102,9 +105,15 @@ header {
   top: 0;
   width: 100%;
   box-sizing: border-box;
-  background: #DD3543;
+  background: #022638;
+  /*background: #0a1217;*/
+  /*background: #333;*/
+  /*background-image: linear-gradient(to top, #30cfd0 0%, #330867 100%);*/
+  /*background-image: linear-gradient(to right, #434343 0%, black 100%);*/
   font-weight: bold;
 }
+
+
 
 nav {
   display: flex;
