--- a/styles/form.css
+++ b/styles/form.css
@@ -11,60 +11,7 @@
 
 /*-- Reset Code --*/
 
-	html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,dl,dt,dd,ol,nav ul,nav li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video{margin:0;padding:0;border:0;font-size:100%;font:inherit;vertical-align:baseline;}
-	article, aside, details, figcaption, figure,footer, header, hgroup, menu, nav, section {display: block;}
-	ol,ul{list-style:none;padding:0;margin:0;}
-	blockquote,q{quotes:none;}
-	blockquote:before,blockquote:after,q:before,q:after{content:'';content:none;}
-	table{border-collapse:collapse;border-spacing:0;}
-	a{text-decoration:none;}
-	.txt-rt{text-align:right;}
-	.txt-lt{text-align:left;}
-	/*--  agileits-getaquote --*/
-	.txt-center{text-align:center;}
-	.float-rt{float:right;}
-	.float-lt{float:left;}
-	.clear{clear:both;}
-	.pos-relative{position:relative;}
-	.pos-absolute{position:absolute;}
-	.vertical-base{vertical-align:baseline;}
-	.vertical-top{vertical-align:top;}
-	.underline{	padding-bottom:5px;	border-bottom:1px solid #eee;margin:0 0 20px 0;}
-	nav.vertical ul li{display:block;}
-	nav.horizontal ul li{display: inline-block;}
-	img{max-width:100%;}
-
-/*-- Reset Code --*/
-
-
-
-
-
-/*-- Index-Page-Styling --*/
-
-body {
-	background: url("../assets/bg.jpg");
-	background-repeat: no-repeat;
-	background-attachment: fixed;
-	background-position: center;
-	/*--  agileits-getaquote --*/
-	background-size: cover;
-	-webkit-background-size: cover;
-	-moz-background-size: cover;
-	-o-background-size: cover;
-	font-family: 'Roboto', sans-serif;
-	text-align: center;
-}
-
-body a, body a:hover, input[type="button"], input[type="submit"], input[type="submit"]:hover, button, button:hover {
-	transition: 0.5s all;
-	-webkit-transition: 0.5s all;
-	-moz-transition: 0.5s all;
-	-o-transition: 0.5s all;
-	-ms-transition: 0.5s all;
-	/*--  agileits-getaquote --*/
-	text-decoration: none;
-}
+	/**/
 
 h1 {
 	font-family: 'Montserrat', sans-serif;
