--- a/styles/main.css
+++ b/styles/main.css
@@ -232,10 +232,11 @@ h1 a img{
 }
 
 .nav_items li a:focus{
+    /*background-color: #00a0e3*/
    background-color: rgba(0, 0, 0, 0.4);
    border-radius: 10px;
    color:#fff;
    font-weight: bold;
+   text-decoration: none;
 }
 
-/
