--- a/styles/form.css
+++ b/styles/form.css
@@ -1,378 +1,175 @@
-/*--
-	Author: getaquote
-	Author URL: http://getaquote.com
-	License: Creative Commons Attribution 3.0 Unported
-	License URL: http://creativecommons.org/licenses/by/3.0/
---*/
-
-
-
-
-
-/*-- Reset Code --*/
-
-	/**/
-
-h1 {
-	font-family: 'Montserrat', sans-serif;
-	font-size: 40px;
-	margin: 75px 0;
-	color: #FFF;
-}
-
 .agileitscontainerwthree {
-	width: 75%;
-	margin: 0 auto;
+  width: 75%;
+  margin: 0 auto;
 }
 
 fieldset fieldset legend, legend.section-title {
-	font-family: 'Montserrat', sans-serif;
-	font-size: 20px;
-	/*--  agileits-getaquote --*/
-	text-align: left;
-	color: #FFF;
-	margin-bottom: 10px;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 20px;
+  /*--  agileits-w3layouts --*/
+  text-align: left;
+  color: #FFF;
+  margin-bottom: 10px;
 }
 
 .form-group {
-	text-align: left;
+  text-align: left;
+      margin-bottom: 0px;
+    padding-bottom: 13px;
 }
 
 .row legend {
-	margin-left: 15px;
+  margin-left: 15px;
 }
 
 .submit {
-	margin-top: 25px;
+  margin-top: 25px;
 }
 
-.jumbotron ul {
-	font-size: .75em;
-}
+
 
 #progress-bar-wrap {
-	min-height: 20px;
-	display: none;
-	margin-bottom: 0;
+  min-height: 20px;
+  display: none;
+  margin-bottom: 0;
 }
 
 #progress-bar-wrap .encouragement {
-	display: none;
+  display: none;
 }
 
 #progress-bar-wrap .close:before {
-	content: "\f0d7";
-	display: inline-block;
-	font-family: FontAwesome;
-	/*--  agileits-getaquote --*/
-	font-style: normal;
-	font-weight: normal;
-	line-height: 1;
-	-webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
+  content: "\f0d7";
+  display: inline-block;
+  font-family: FontAwesome;
+  /*--  agileits-w3layouts --*/
+  font-style: normal;
+  font-weight: normal;
+  line-height: 1;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
-#progress-bar-wrap span {
-	line-height: 1.75em;
-}
 
-#progress-bar-wrap.collapsed h4 {
-	font-size: 14px;
-	color: #999999;
-}
-
-#progress-bar-wrap.collapsed .encouragement {
-	display: none;
-}
-
-#progress-bar-wrap.collapsed .progress {
-	display: none;
-}
-
-#progress-bar-wrap.collapsed .close:before {
-	content: "\f0d8";
-	display: inline-block;
-	font-family: FontAwesome;
-	font-style: normal;
-	font-weight: normal;
-	line-height: .75em;
-	/*--  agileits-getaquote --*/
-	-webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
-}
 
 label {
-	font-family: 'Montserrat', sans-serif;
-	font-size: 14px;
-	color: #CCC;
-	margin-bottom: 5px;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 14px;
+  color: #CCC;
+  margin-bottom: 5px;
 }
 
 .label {
-	padding: 0px;
-	font-weight: 100;
+  padding: 0px;
+  font-weight: 100;
 }
 
 .label-info {
-	background-color: #009688;
+  background-color: #009688;
 }
 
 .form-control {
-	padding: 12px;
-	font-size: 13px;
-	color: #FFF;
-	/*--  agileits-getaquote --*/
-	background-color: rgba(0, 0, 0, 0.7);
-	border: 1px solid #777;
-	border-radius: 0;
-	box-shadow: none;
-	height: inherit;
-	line-height: 0;
+  padding: 12px;
+  font-size: 13px;
+  color: #FFF;
+  /*--  agileits-w3layouts --*/
+  background-color: rgba(0, 0, 0, 0.7);
+  border: 1px solid #777;
+  border-radius: 0;
+  box-shadow: none;
+  height: inherit;
+  line-height: 0;
 }
 
 fieldset {
-	text-align: left;
+  text-align: left;
 }
 
 fieldset fieldset fieldset legend {
-	font-size: 13px;
-	margin-bottom: 5px;
+  font-size: 13px;
+  margin-bottom: 5px;
 }
-
+legend {
+    display: block;
+    width: 100%;
+    padding: 0;
+   
+    line-height: inherit;
+    color: #333;border: 0;
+   
+}
 button.btn-primary {
-	font-family: 'Montserrat', sans-serif;
-	font-size: 16px;
-	color: #fff;
-	padding: 7px 30px;
-	/*--  agileits-getaquote --*/
-	background-color: #000;
-	border-color: #FFF;
-	border-radius: 0;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 16px;
+  color: #fff;
+  padding: 7px 30px;
+  /*--  agileits-w3layouts --*/
+  background-color: #000;
+  border-color: #FFF;
+  border-radius: 0;
 }
 
 button.btn.btn-lg.btn-primary.submit:hover {
-	background-color: #009688;
-	border-color: #009688;
+  background-color: #009688;
+  border-color: #009688;
 }
 
-.navbar-default {
-	background-color: #F5F5F5;
-	border-color: #2196F3;
-	height: 100px;
-}
+
 
 h4 {
-	font-family: 'Montserrat', sans-serif;
-	font-size: 18px;
-	margin-top: 20px;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 18px;
+  margin-top: 20px;
 }
 
 .progress {
-	margin-top: 20px;
-	margin-bottom: 0;
-	/*--  agileits-getaquote --*/
-	background-color: #333;
+  margin-top: 20px;
+  margin-bottom: 0;
+  /*--  agileits-w3layouts --*/
+  background-color: #333;
 }
 
 .progress-bar-info {
-	background-color: #009688;
+  background-color: #009688;
 }
 
 ::-webkit-input-placeholder {
-	color: #FFF!important;
+  color: #FFF!important;
 }
 
 ::-moz-placeholder {
-	color: #FFF!important;
+  color: #FFF!important;
 }
 
 ::-moz-placeholder {
-	color: #FFF!important;
+  color: #FFF!important;
 }
 
 ::-ms-input-placeholder {
-	color: #FFF!important;
+  color: #FFF!important;
 }
 
 .w3lsfooteragileits {
-	margin: 50px 10px 150px;
+  margin: 50px 10px 150px;
 }
 
 .w3lsfooteragileits p {
-	font-size: 15px;
-	line-height: 25px;
-	color: #CCC;
+  font-size: 15px;
+  line-height: 25px;
+  color: #CCC;
 }
 
 .w3lsfooteragileits p a {
-	font-family: 'Montserrat', sans-serif;
-	color: #CCC;
+  font-family: 'Montserrat', sans-serif;
+  color: #CCC;
 }
 
 .w3lsfooteragileits p a:hover {
-	color: #FFF;
+  color: #FFF;
 }
-
-/*-- Index-Page-Styling --*/
-
-
-
-
-
-
-
-
-
-
-/*-- Responsive-Code --*/
-
-
-
-
-
-@media screen and (max-width: 1920px) {
-	.agileitscontainerwthree {
-		width: 50%;
-	}
+.form-title {
+    text-align: center;
+    color: #ffffff;
+    margin: 0 0 58px 0;
+    padding-top: 104px;
 }
-
-@media screen and (max-width: 1680px) {
-	.agileitscontainerwthree {
-		width: 60%;
-	}
-}
-
-@media screen and (max-width: 1600px) {
-	.agileitscontainerwthree {
-		width: 70%;
-	}
-}
-
-@media screen and (max-width: 1366px) {
-	h1 {
-		margin: 50px 0;
-	}
-}
-
-@media screen and (max-width: 1024px) {
-	.agileitscontainerwthree {
-		width: 75%;
-	}
-}
-
-@media screen and (max-width: 991px) {
-	.form-group.col-md-4 {
-		width: 33.3%;
-		float: left;
-	}
-	.form-group.col-md-6 {
-		width: 50%;
-		float: left;
-	}
-}
-
-@media screen and (max-width: 768px) {
-	.agileitscontainerwthree {
-		width: 80%;
-	}
-}
-
-@media screen and (max-width: 767px) {
-	h1 {
-		margin: 40px 0;
-	}
-	.agileitscontainerwthree {
-		width: 65%;
-	}
-	.form-group {
-		margin-bottom: 10px;
-		/*--  agileits-getaquote --*/
-	}
-	.form-group.col-md-4 {
-		width: 100%;
-	}
-	.form-group.col-md-6 {
-		width: 100%;
-	}
-	fieldset fieldset legend, legend.section-title {
-		font-size: 18px;
-	}
-	label {
-		font-size: 13px;
-	}
-}
-
-@media screen and (max-width: 736px) {
-	h1 {
-		font-size: 35px;
-		margin: 35px 0;
-	}
-	.form-control {
-		padding: 10px;
-	}
-}
-
-@media screen and (max-width: 568px) {
-	button.btn-primary {
-		font-size: 14px;
-	}
-	.w3lsfooteragileits p {
-		font-size: 14px;
-	}
-}
-
-@media screen and (max-width: 480px) {
-	h4 {
-		font-size: 16px;
-	}
-}
-
-@media screen and (max-width: 414px) {
-	h1 {
-		font-size: 30px;
-		margin: 25px 0;
-	}
-	.agileitscontainerwthree {
-		width: 80%;
-	}
-	fieldset fieldset legend, legend.section-title {
-		margin-bottom: 7px;
-	}
-	.navbar-default {
-		height: 120px;
-	}
-	.progress {
-		height: 15px;
-	}
-}
-
-@media screen and (max-width: 384px) {
-	h1 {
-		font-size: 28px;
-	/*--  agileits-getaquote --*/
-	}
-}
-
-@media screen and (max-width: 320px) {
-	h1 {
-		font-size: 26px;
-	}
-	.agileitscontainerwthree {
-		width: 90%;
-	}
-	fieldset fieldset legend, legend.section-title {
-		font-size: 16px;
-	}
-	label {
-		font-size: 12px;
-	}
-	.w3lsfooteragileits p {
-		font-size: 13px;
-	}
-}
-
-
-
-
-
-/*-- //Responsive-Code --*/
