--- a/styles/main.css
+++ b/styles/main.css
@@ -213,138 +213,37 @@ h1 a img{
     
 }
 
-/*StartProject Section1*/
 
-.proj1img p{
-    text-align: center;
-    color:#fff;
-    font-size: 40px;
-    font-weight: 700;
-    height: 100%;
-    transition: uppercase;
-    padding: 80px;
-    background-color: rgba(0,0,0,0.5);
-    text-shadow: 2px 2px 2px #fff;
-}
-
-
-.proj1img :hover{
-    background-color: rgb(0,0,0);
-}
-
-.proj1img{
-    background:url("../assets/LINER HOME.jpg") center center;
-    background-size: cover;
-    height: 500px;
-    width: 100%;
-    background-color: rgba(0,0,0,0.5); 
-}
-
-
-/*End Project Section1*/
-
-
-/*Project Section 2*/
-
-
-.proj2img p{
-    text-align: center;
-    color:#fff;
-    font-size: 40px;
-    font-weight: 700;
-    height: 100%;
-    transition: uppercase;
-    padding: 80px;
-    background-color: rgba(0,0,0,0.5);
-    text-shadow: 2px 2px 2px #fff;
-    
-}
-
-
-.proj2img :hover{
-    background-color: rgb(0,0,0);
-}
-
-.proj2img{
-    background:url("../assets/LINER SERVICE OP2.jpg") center center;
-    background-size: cover;
-    height: 500px;
-    width: 100%;
-}
-
-
-
-/*End Project Sectoin 2*/
-/*Project Section 2*/
-
-
-.proj3img p{
-    text-align: center;
-    color:#fff;
-    font-size: 40px;
-    font-weight: 700;
-    height: 100%;
-    transition: uppercase;
-    padding: 80px;
-    background-color: rgba(0,0,0,0.5);
-    text-shadow: 2px 2px 2px #fff;
-    
-}
-
-
-.proj3img :hover{
-    background-color: rgb(0,0,0);
-}
-
-.proj3img{
-    background:url("../assets/LINER SERVICE OP2.jpg") center center;
-    background-size: cover;
-    height: 500px;
-    width: 100%;
-}
-
-#proj1{
-      margin: 50px 0px;
-}
-#proj2{
-      margin: 50px 0px;
-}
-#proj3{
-      margin: 50px 0px;
-}
-
-
-/*End Project Sectoin 2*/
 
 /*big Buttons*/
-#one, #two, #three{
+.numberone, .numbertwo, .numberthree{
     cursor:pointer;
     color:#fff;
     text-shadow: 2px 2px 2px #000000;
-    height: 100px;
+    height: 130px;
     background-color: #022638;
 }
 
-#three h2{
+.numberthree h2{
     font-weight: 900;
     font-size: 22px;
 }
 
-#two h2{
+.numbertwo h2{
     font-weight: 900;
     font-size: 22px;
 }
 
-#one h2{
+.numberone h2{
     font-weight: 900;
     font-size: 22px;
 }
 
-#one{
+.numberone{
    border-right: 5px solid #fff;
 }
 
-#two{
+.numbertwo{
   border-right: 5px solid #fff;
 }
 
@@ -386,178 +285,7 @@ h1 a img{
    transition: 1.2s;
 
 }
-.main_list_box .sepimg{
-   height: 200px;
-   width: 200px;
-    background-image: url('../assets/data1/images/liner_service_op1.jpg');
-   display:inline-block;
-   transition: background 1.2s;
-   transition: 1.2s;
 
-}
-
-.main_list_box .sepimg1{
-   height: 200px;
-   width: 200px;
-    background-image: url('../assets/data1/images/liner_service_op1.jpg');
-   display:inline-block;
-   transition: background 1.2s;
-   transition: 1.2s;
-
-}
-.main_list_box .sepimg2{
-   height: 200px;
-   width: 200px;
-    background-image: url('../assets/data1/images/liner_service_op1.jpg');
-   display:inline-block;
-   transition: background 1.2s;
-   transition: 1.2s;
-
-}
-.main_list_box .sepimg3{
-   height: 200px;
-   width: 200px;
-    background-image: url('../assets/Break Bulk on Liner vessel.jpg');
-   display:inline-block;
-   transition: background 1.2s;
-   transition: 1.2s;
-
-}
-.main_list_box .sepimg4{
-   height: 200px;
-   width: 200px;
-    background-image: url('../assets/data1/images/liner_service_op1.jpg');
-   display:inline-block;
-   transition: background 1.2s;
-   transition: 1.2s;
-
-}
-.main_list_box .sepimg5{
-   height: 200px;
-   width: 200px;
-    background-image: url('../assets/Break Bulk on Liner vessel.jpg');
-   display:inline-block;
-   transition: background 1.2s;
-   transition: 1.2s;
-
-}
-.main_list_box .sepimg6{
-   height: 200px;
-   width: 200px;
-    background-image: url('../assets/Break Bulk on Liner vessel.jpg');
-   display:inline-block;
-   transition: background 1.2s;
-   transition: 1.2s;
-
-}
-.main_list_box .sepimg7{
-   height: 200px;
-   width: 200px;
-    background-image: url('../assets/Break Bulk on Liner vessel.jpg');
-   display:inline-block;
-   transition: background 1.2s;
-   transition: 1.2s;
-
-}
-.main_list_box .sepimg8{
-   height: 200px;
-   width: 200px;
-    background-image: url('../assets/Break Bulk on Liner vessel.jpg');
-   display:inline-block;
-   transition: background 1.2s;
-   transition: 1.2s;
-
-}
-
-.main_list_box .sepimg9{
-   height: 200px;
-   width: 200px;
-    background-image: url('../assets/Break Bulk on Liner vessel.jpg');
-   display:inline-block;
-   transition: background 1.2s;
-   transition: 1.2s;
-
-}
-.main_list_box .sepimg10{
-   height: 200px;
-   width: 200px;
-    background-image: url('../assets/Break Bulk on Liner vessel.jpg');
-   display:inline-block;
-   transition: background 1.2s;
-   transition: 1.2s;
-
-}
-.main_list_box .sepimg11{
-   height: 200px;
-   width: 200px;
-    background-image: url('../assets/Break Bulk on Liner vessel.jpg');
-   display:inline-block;
-   transition: background 1.2s;
-   transition: 1.2s;
-
-}
-.main_list_box .sepimg12{
-   height: 200px;
-   width: 200px;
-    background-image: url('../assets/Break Bulk on Liner vessel.jpg');
-   display:inline-block;
-   transition: background 1.2s;
-   transition: 1.2s;
-
-}
-.main_list_box .sepimg13{
-   height: 200px;
-   width: 200px;
-    background-image: url('../assets/Break Bulk on Liner vessel.jpg');
-   display:inline-block;
-   transition: background 1.2s;
-   transition: 1.2s;
-
-}
-.main_list_box .sepimg14{
-   height: 200px;
-   width: 200px;
-    background-image: url('../assets/Break Bulk on Liner vessel.jpg');
-   display:inline-block;
-   transition: background 1.2s;
-   transition: 1.2s;
-
-}
-.sepimg15{
-     height: 196px;
-    width: 196px;
-    margin: 50px 14px;
-    
-    background-image: url(../assets/bg.jpg);
-    display: inline-block;
-    -webkit-transition: width 2s, height 2s; 
-    transition: width 2s, height 2s;
-
-}
-.sepimg15 :hover{
-  background-color: #7f7f7fb3;
-  width: 196px;
-  height: 196px;
-
-}
-.main_list_box .sepimg16{
-   height: 200px;
-   width: 200px;
-    background-image: url('../assets/Break Bulk on Liner vessel.jpg');
-   display:inline-block;
-   transition: background 1.2s;
-   transition: 1.2s;
-
-}
-.main_list_box .sepimg17{
-   height: 200px;
-   width: 200px;
-    background-image: url('../assets/Break Bulk on Liner vessel.jpg');
-   display:inline-block;
-   transition: background 1.2s;
-   transition: 1.2s;
-
-}
 .main_list_box li:hover{
    height: 200px;
    width: 200px;
