--- a/styles/mediaqueries.css
+++ b/styles/mediaqueries.css
@@ -27,4 +27,46 @@
 }
 
 
+/*Larger Screen Media Queries*/
+@media(min-width: 1600px){
+    .animate-arrow {
+    margin: 0 50px !important;
+    }
+
+    .home-doctors h3{
+ position: absolute;
+    top: 45%;
+    left: 23px;
+    width: 59%;
+    text-align: center;
+    opacity: 0;
+    z-index: 1;
+    /* background: #707171; */
+    color: #ffffff;
+    padding: 7px 0px;
+    /* border: 1px solid rgba(255, 255, 255, 0.33); */
 }
+
+}
+
+
+@media(min-width: 1900px){
+    .animate-arrow {
+    margin: 0 90px !important;
+    }
+
+    .home-doctors h3{
+    position: absolute;
+    top: 45%;
+    left: 23px;
+    width: 59%;
+    text-align: center;
+    opacity: 0;
+    z-index: 1;
+    /* background: #707171; */
+    color: #ffffff;
+    padding: 7px 0px;
+    /* border: 1px solid rgba(255, 255, 255, 0.33); */
+    }
+}
+
