--- a/styles/main.css
+++ b/styles/main.css
@@ -30,143 +30,34 @@ p{
 }
 
 
-      /*RESET STYLES
-–––––––––––––––––––––––––––––––––––––––––––––––––– */
-ul li a{
-  text-transform: uppercase;
-  color: #022638;
-
-}
-
-.menu_items ul{
-  padding-top: 15px;
-
-}
-
-body,h1,ul {
-  margin: 0;
-}
-
-li {
-  list-style-type: none;
-}
-
-h1 {
-  font-size: 1.5rem;
-}
-
-a {
-  text-decoration: none;
-  color: #fff;
-}
-
-
 body {
-  background: #f1f1f1;
+  background: #fff;
   color: #272626;
   font-family: 'Bitter', serif;
 }
 
-/* HEADER STYLES
-–––––––––––––––––––––––––––––––––––––––––––––––––– */
+/*New Header*/
+.navbar {
+    position: relative;
+    min-height: 80px;
+    margin-bottom: 0px;
+    border: 1px solid transparent;
+    border-radius:0px;
+    width: 100%;
+    background-color: #fff;
+}
 
-header {
-  z-index: 1000;
+.navbar .navbar-inverse{
   position: fixed;
-  height: 100px;
-  top: 0;
-  width: 100%;
-  box-sizing: border-box;
-
-  background: #ffffff;
- 
-  font-weight: bold;
-
- 
-
+  color:blue;
 }
 
-nav {
-  display: flex;
-  align-items: flex-end;
-  justify-content: space-between;
-  transition: align-items .2s;
- margin-top: -50px;
-}
-
-ul {
-  display: flex;
-  padding: 0;
-  transition: margin .2s;
-}
-
-li:not(:last-child) {
-  margin-right: 20px;
-}
-
-li a {
-  display: block;
-  padding: 10px 20px;
-}
-
-.toggle-menu {
-  display: none;
-  font-size: 2rem;
-  color: #fff;
-  margin: 10px 10px 0 0;
-  transition: margin .2s;
+.inverse .navbar-nav>li>a:hover {
+    color:blue;
+    background-color: transparent;
 }
 
 
-
-/* STYLES FOR THE "scroll" CLASS
-–––––––––––––––––––––––––––––––––––––––––––––––––– */
-
-.scroll {
-  box-shadow: 0 7px 0 0 rgba(0, 0, 0, .1);
-}
-
-.scroll .logo {
-  padding: 10px 20px;
-  font-size: 1.5rem;
-}
-
-.scroll nav {
-  align-items: center;
-}
-
-.scroll .logo,
-.scroll ul,
-.scroll .toggle-menu {
-  margin: 0;
-}
-
-
-/* MQ STYLES
-–––––––––––––––––––––––––––––––––––––––––––––––––– */
-
-@media screen and (max-width: 1060px) {
-  header {
-    padding: 10px;
-  }
-  nav {
-    align-items: center;
-  }
-  ul {
-    display: none;
-  }
-  .logo {
-    font-size: 1.8rem;
-    margin: 45px 0 0 10px;
-  }
-  .toggle-menu {
-    display: block;
-  }
-}
-
-
-/* STYLES FOR THE COUNTER
-–––––––––––––––––––––––––––––––––––––––––––––––––– */
 
 .counter {
   visibility: hidden;
