--- a/styles/mediaqueries.css
+++ b/styles/mediaqueries.css
@@ -11,7 +11,7 @@
 
  .animate-arrow {
     left: 10px;
-    padding: 1px 265px !important;
+    padding: 1px 182px !important;
 
 }
 
@@ -35,6 +35,11 @@
 	width: 183px;
     margin-top: -32px;
 } 
+.navbar-default {
+    background-color: #ffffff;
+    border-color: #ffffff;
+    height: 105px;
+}
 
 }
 /*Larger Screen Media Queries*/
