--- a/styles/mediaqueries.css
+++ b/styles/mediaqueries.css
@@ -3,6 +3,21 @@
     div.sidebar{
       width:75%;
     }
+    .home-doctors img {
+    width: 233px !important;
+    height: 192px !important;
+}
+.home-doctors h3 {
+    position: absolute;
+    top: 45%;
+    left: 29px;
+    width: 71% !important;
+    text-align: center;
+    opacity: 0;
+    z-index: 1;
+    color: #ffffff;
+    padding: 7px 0px;
+}
  }
 
  /*END for sidebar inner pages larger screens*/
@@ -42,7 +57,21 @@
     border-color: #ffffff;
     height: 105px;
 }
-
+.home-doctors h3 {
+    position: absolute;
+    top: 41%;
+    left: 22px;
+    width: 69%;
+    text-align: center;
+    opacity: 0;
+    z-index: 1;
+    color: #ffffff;
+    padding: 5px 0px;
+}
+.home-doctors img {
+    width: 146px;
+    height: 146px;
+}
 }
 /*Larger Screen Media Queries*/
 
