--- a/styles/main.css
+++ b/styles/main.css
@@ -1,89 +1,5 @@
-/*header latest*/
-/*.third-level-menu
-{
-    position: absolute;
-    top: 0;
-    right: -150px;
-    width: 150px;
-    list-style: none;
-    padding: 0;
-    margin: 0;
-    display: none;
-}
+/*-------header new----------*/
 
-.third-level-menu > li
-{
-    height: 30px;
-    background: #fff;
-}
-.third-level-menu > li:hover { background: #CCCCCC; }
-
-.second-level-menu
-{
-    position: absolute;
-    top: 30px;
-    left: 0;
-    width: 150px;
-    list-style: none;
-    padding: 0;
-    margin-left: 35px;
-    display: none;
-}
-
-.second-level-menu > li
-{
-    position: relative;
-    height: 30px;
-    background: #999999;
-}
-.second-level-menu > li:hover { background: blue; }
-
-.top-level-menu
-{
-    list-style: none;
-    padding: 0;
-    margin: 0;
-}
-
-.top-level-menu > li
-{
-    position: relative;
-    float: left;
-    height: 30px;
-    width: 150px;
-    background:none;
-    color:black;
-}
-.top-level-menu > li:hover { background: #CCCCCC; }
-*/
-/*.top-level-menu li:hover > ul
-{
-    display: inline;
-}
-*/
-/* Menu Link Styles */
-
- /* Apply to all links inside the multi-level menu */
-/*.top-level-menu a
-{
-    font: bold 14px Arial, Helvetica, sans-serif;
-    color: black;
-    text-decoration: none;
-    padding: 0 0 0 40px;
-*/
-    /* Make the link cover the entire list item-container */
-  /*  display: block;
-    line-height: 30px;
-}
-.top-level-menu a:hover { color: #000000; }*/
-
-
-/*end*/
-
-
-
-
-/*header new*/
  .nav .open>a:focus{
   background-color:rgba(0,0,0,0.7);
  }
@@ -133,134 +49,6 @@ ul#menu li {
    }
 }​
 
-/*header new ends here*/
-
-/* Navigation */
-/*.navbar-default {
-  background-color: #011034;
-  border-color: #011034;
-  padding: 10px 0px 10px 0;
-  letter-spacing:1px;
-  font-weight:800;
-  text-transform: uppercase;
-      webkit-box-shadow: 0 2px 5px 0 rgba(0,0,0,.16),0 2px 10px 0 rgba(0,0,0,.12);
-    -moz-box-shadow: 0 2px 5px 0 rgba(0,0,0,.16),0 2px 10px 0 rgba(0,0,0,.12);
-    -ms-box-shadow: 0 2px 5px 0 rgba(0,0,0,.16),0 2px 10px 0 rgba(0,0,0,.12);
-    -o-box-shadow: 0 2px 5px 0 rgba(0,0,0,.16),0 2px 10px 0 rgba(0,0,0,.12);
-    box-shadow: 0 2px 5px 0 rgba(0,0,0,.16),0 2px 10px 0 rgba(0,0,0,.12);
-}
-.navbar-default {
-  background-color: #011034;
-  border-color: #011034;
-}
-.navbar-default .navbar-brand {
-  color: #ffffff;
-}
-.navbar-default .navbar-brand:hover,
-.navbar-default .navbar-brand:focus {
-  color: #022638;
-}
-.navbar-default .navbar-text {
-  color: #ffffff;
-}
-.navbar-default .navbar-nav > li > a {
-  color: #ffffff;
-}
-.navbar-default .navbar-nav > li > a:hover,
-.navbar-default .navbar-nav > li > a:focus {
-  color: #022638;
-}
-
-.navbar-default .navbar-nav > li > .dropdown-menu > li > a {
-  color: #ffffff;
-  line-height: 1.85em;
-}
-.navbar-default .navbar-nav > li > .dropdown-menu > li > a:hover,
-.navbar-default .navbar-nav > li > .dropdown-menu > li > a:focus {
-  color: #ffffff;
-  background-color: #022638;
-}
-.navbar-default .navbar-nav > li > .dropdown-menu > li.divider {
-  background-color: #011034;
-}
-.navbar-default .navbar-nav .open .dropdown-menu > .active > a,
-.navbar-default .navbar-nav .open .dropdown-menu > .active > a:hover,
-.navbar-default .navbar-nav .open .dropdown-menu > .active > a:focus {
-  color: #022638;
-  background-color: #011034;
-}
-.navbar-default .navbar-nav > .active > a,
-.navbar-default .navbar-nav > .active > a:hover,
-.navbar-default .navbar-nav > .active > a:focus {
-  color: #022638;
-  background-color: #011034;
-}
-.navbar-default .navbar-nav > .open > a, .navbar-default .navbar-nav > .open > a:hover, .navbar-default .navbar-nav > .open > a:focus {
-    color: #ffffff;
-    background-color: #022638;
-}
-.navbar-default .navbar-toggle {
-  border-color: #011034;
-}
-.navbar-default .navbar-toggle:hover,
-.navbar-default .navbar-toggle:focus {
-  background-color: #022638;
-}
-.navbar-default .navbar-toggle .icon-bar {
-  background-color: #022638;
-}
-.navbar-default .navbar-collapse,
-.navbar-default .navbar-form {
-  border-color: #ffffff;
-}
-.navbar-default .navbar-link {
-  color: #ffffff;
-}
-.navbar-default .navbar-link:hover {
-  color: #022638;
-}
-*/
-/*@media (max-width: 767px) {
-  .navbar-default .navbar-nav .open .dropdown-menu > li > a {
-    color: #ffffff;
-  }
-  .navbar-default .navbar-nav .open .dropdown-menu > li > a:hover,
-  .navbar-default .navbar-nav .open .dropdown-menu > li > a:focus {
-    color: #022638;
-  }
-  .navbar-default .navbar-nav .open .dropdown-menu > .active > a,
-  .navbar-default .navbar-nav .open .dropdown-menu > .active > a:hover,
-  .navbar-default .navbar-nav .open .dropdown-menu > .active > a:focus {
-    color: #022638;
-    background-color: #022638;
-  }
-}*/
-/*.navbar-fixed-top {
-    top: 51px;
-   
-}
-.navbar-default {
-    background-color: #ffffff;
-    border-color: #ffffff;
-}
-.navbar-default .navbar-nav > .active > a {
-  color: #ffffff;
-    background-color: #022638;
-}
-.navbar-default .navbar-nav > li > a {
-    color: #022638;
-}
-.navbar-default .navbar-nav > li > .dropdown-menu {
-    background-color: #022638;
-}*/
-/*Start Box Body*/
-/*.body-content .col-md-6{
-  padding-right: 0px;
-  padding-left:0px;
-}
-*/
-/*End Box Body*/
-
 /*Footer*/
 .footer-classic{
   background:linear-gradient(0deg,rgba(2,38,56,0.8),rgba(0,0,0,0.8)),url(https://www.desktopbackground.org/p/2010/08/18/66072_111-cruise-ship-hd-wallpapers_3840x2160_h.jpg) center center;
@@ -284,22 +72,11 @@ p{
 }
 
 
-      /*RESET STYLES
-–––––––––––––––––––––––––––––––––––––––––––––––––– */
-/*ul li a{
-  text-transform: uppercase;
-  color: #022638;
-
-}*/
-
 .menu_items ul{
   padding-top: 15px;
 
 }
 
-/*body,h1,ul {
-  margin: 0;
-}*/
 
 li {
   list-style-type: none;
@@ -309,70 +86,12 @@ h1 {
   font-size: 1.5rem;
 }
 
-/*a {
-  text-decoration: none;
-  color: #fff;
-}*/
-
 
 body {
   background: #f1f1f1;
   color: #272626;
   font-family: 'Bitter', serif;
 }
-
-/* HEADER STYLES
-–––––––––––––––––––––––––––––––––––––––––––––––––– */
-/*
-header {
-  z-index: 1000;
-  position: fixed;
-  height: 46px;
-  top: 0;
-  width: 100%;
-  box-sizing: border-box;
-
-  background: #ffffff;
- 
-  font-weight: bold;
-
-}
-*/
-/*nav {
-  display: flex;
-  align-items: flex-end;
-  justify-content: space-between;
-  transition: align-items .2s;
- margin-top: -50px;
-}
-
-ul {
-  display: flex;
-  padding: 0;
-  transition: margin .2s;
-}
-
-li:not(:last-child) {
-  margin-right: 20px;
-}
-
-li a {
-  display: block;
-  padding: 10px 20px;
-}
-
-.toggle-menu {
-  display: none;
-  font-size: 2rem;
-  color: #fff;
-  margin: 10px 10px 0 0;
-  transition: margin .2s;
-}*/
-
-
-
-/* STYLES FOR THE "scroll" CLASS
-–––––––––––––––––––––––––––––––––––––––––––––––––– */
 
 .scroll {
   box-shadow: 0 7px 0 0 rgba(0, 0, 0, .1);
@@ -394,35 +113,8 @@ li a {
 }
 
 
-/* MQ STYLES
-–––––––––––––––––––––––––––––––––––––––––––––––––– */
-
-/*@media screen and (max-width: 1060px) {
-  header {
-    padding: 10px;
-  }
-  nav {
-    align-items: center;
-  }
-  ul {
-    display: none;
-  }
-  .logo {
-    font-size: 1.8rem;
-    margin: 45px 0 0 10px;
-  }
-  .toggle-menu {
-    display: block;
-  }
-}*/
-
-
-/* STYLES FOR THE COUNTER
-–––––––––––––––––––––––––––––––––––––––––––––––––– */
-
 
 /*Above code for the old header*/
-
 .counter {
   visibility: hidden;
   position: fixed;
@@ -449,7 +141,6 @@ h1 a img{
 }
 
 .nav_items li a:focus{
-    /*background-color: #00a0e3*/
    background-color: rgba(0, 0, 0, 0.4);
    border-radius: 10px;
    color:#fff;
@@ -464,8 +155,6 @@ h1 a img{
     text-transform: uppercase;
     
 }
-
-
 
 /*big Buttons*/
 .numberone, .numbertwo, .numberthree{
@@ -499,15 +188,7 @@ h1 a img{
   border-right: 5px solid #fff;
 }
 
-/*---------------
-/*end big Buttons
-
-    html{
-        overflow-x:hidden;
-    }
-
-    /*------------------*/
-
+/*end big Buttons-----*/
 
 .html{
     overflow-x: hidden;
@@ -543,7 +224,6 @@ h1 a img{
    width: 200px;
    background-image: linear-gradient(rgba(4, 4, 4, 0.4),rgba(4, 4, 4, 0.4));
    color:#fff;
-   /*border-radius: 100%;*/
    border:none;
 }
 
@@ -563,20 +243,16 @@ h1 a img{
 vertical-align:middle;
 }
 
-/*6Boxes Right End*/
-/*Boxes CSS*/
-
 .box{
-        float: left;
-        padding-top: 50px;
-        padding-bottom: 100px;
-        width: 100%;
-        padding-left:0;
-        padding-right:0;
-        background-color: white;
-        background:url(https://www.desktopbackground.org/p/2010/08/18/66072_111-cruise-ship-hd-wallpapers_3840x2160_h.jpg) no-repeat center center;
-          background-size: cover;
-
+    float: left;
+    padding-top: 50px;
+    padding-bottom: 100px;
+    width: 100%;
+    padding-left:0;
+    padding-right:0;
+    background-color: white;
+    background:url(https://www.desktopbackground.org/p/2010/08/18/66072_111-cruise-ship-hd-wallpapers_3840x2160_h.jpg) no-repeat center center;
+    background-size: cover;
 }
 
 #icon-wrapper{
@@ -638,183 +314,8 @@ vertical-align:middle;
   margin-top:0;
 }
 
-@media only screen and (max-width: 1300px) {
-  #icon-wrapper{
-        width:100%;
-        float:left;
-        height:170px;
-    }
-  .icon-slide-container {
-        height: 200px;
-        overflow: hidden;
-        text-align: left;
-        position: absolute;
-        float: left;
-        width: 200px;
-        left: 50%;
-        margin-left: -100px;
-    }
-  .slide-icon {
-        width: 200px;
-        height: auto;
-        position: absolute;
-        margin-top: -200px;
-    }
-}
-
-@media only screen and (max-width: 1000px) {
-  #home-social-container{
-        margin-right: 0;
-        margin-left: 0;
-        width: 100%;
-        padding: 0;
-        float: left;
-        left: 0;
-    }
-}
-
-@media only screen and (max-width: 840px) {
-  #icon-wrapper{
-        width:100%;
-        float:left;
-        height:650px;
-    }
-    
-    .icon-slide-container {
-        height: 300px;
-        overflow: hidden;
-        text-align: left;
-        position: absolute;
-        float: left;
-        width: 300px;
-        left: 50%;
-        margin-left: -150px;
-    }
-    
-    .slide-icon {
-        width: 300px;
-        height: auto;
-        position: absolute;
-        margin-top: -300px;
-    }   
-    .icons {
-        width: 50%;
-        float: left;
-        position: relative;
-    }
-    .icons2 {
-        width: 50%;
-        float: left;
-        position: relative;
-        margin-left: 50%;
-    }
-    .icons3 {
-        width: 50%;
-        float: left;
-        position: relative;
-        margin-left: 0%;
-        margin-top: 350px;
-    }
-    .icons4 {
-        width: 50%;
-        float: left;
-        position: relative;
-        margin-left: 50%;
-    }
-}
-                        
-@media only screen and (max-width: 650px) {
-    #icon-wrapper {
-        height: 400px;
-    }
-    #section{
-        width: 90%;
-        padding-left:5%;
-        padding-right:5%;
-    }
-    .slide-icon {
-        width: 200px;
-        height: auto;
-        position: absolute;
-        margin-top: -200px;
-    }
-    .icon-slide-container {
-        height: 200px;
-        width: 200px;
-        left: 50%;
-        margin-left: -100px;
-    }
-    .icons3 {
-        width: 50%;
-        position: relative;
-        margin-left: 0%;
-        margin-top: 230px;
-    }
-}
-                                  
-@media only screen and (max-width: 570px) {
-    #icon-wrapper {
-        height: 300px;
-    }
-    .slide-icon {
-        width: 150px;
-        height: auto;
-        position: absolute;
-        margin-top: -150px;
-    }
-    .icon-slide-container {
-        height: 150px;
-        width: 150px;
-        left: 50%;
-        margin-left: -75px;
-    }
-    .icons3 {
-        width: 50%;
-        float: left;
-        margin-left: 0%;
-        margin-top: 190px;
-    }   
-}
-    /*End Boxes CSS*/
-
-   .zoom {
-    display: inline-block; 
-    overflow: hidden;     
-}
-
-    .zoom img:hover {
-    transform:scale(1.2);
-    -ms-transform:scale(1.2); /* IE 9 */
-    -moz-transform:scale(1.2); /* Firefox */
-    -webkit-transform:scale(1.2); /* Safari and Chrome */
-    -o-transform:scale(1.2); /* Opera */
-    }
-
-    .zoom img {
-    -moz-transition: all 0.6s;
-    -webkit-transition: all 0.6s;
-    transition: all 0.6s;
-    }
-
-   .col-md-6, .container-fluid{
-        padding-right: 0px;
-        padding-left:0px;
-    }   
-
-    .col-md-12{
-        padding-right: 0px;
-        padding-left:0px;
-    } 
-
-    .port_img{
-        width: 100%;
-        min-height: 250px;
-    }
- .link{
-  color: #ffffff;
- }
-
-
+                  
+                                
 
 
 
